# BioLens

./: .env.example  Fusion-Classifier.ipynb  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
.kiro/specs/biolens-symptom-checker/: design.md  requirements.md  tasks.md
.kiro/specs/gemini-consultation/: design.md  requirements.md  tasks.md
backend/: .env.example  Dockerfile  pyproject.toml  pytest.ini
backend/app/: __init__.py  config.py  main.py
backend/tests/: test_main.py
frontend/: .env.example  IMAGE_ANALYZER_IMPLEMENTATION.md  NEXTJS_ARCHITECTURE.md  SERVER_SIDE_FIX.md  SETUP_GUIDE.md  TASK_4_2_COMPLETION.md  jest.config.js  package-lock.json  package.json  test-gemini-setup.js
frontend/app/: page.tsx
frontend/app/api/analyze/: route.ts
frontend/app/api/cleanup/: route.ts
frontend/components/: analysis-pie-chart.tsx
frontend/lib/: api-client.ts  consultation-engine.ts  gemini-client.ts  image-analyzer.ts
frontend/lib/__tests__/: consultation-engine.test.ts  gemini-client.test.ts  image-analyzer.test.ts
frontend/scripts/: test-image-analyzer.js  test-integration.js
ml-services/biobert-service/: Dockerfile  pyproject.toml  pytest.ini
ml-services/biobert-service/app/: __init__.py  main.py
ml-services/biobert-service/tests/: __init__.py  test_main.py
ml-services/image-analysis-service/: Dockerfile  pyproject.toml
ml-services/image-analysis-service/app/: __init__.py  main.py
ml-services/image-analysis-service/tests/: __init__.py  test_main.py
scripts/: dev-setup.sh  dev-teardown.sh
(+2 files in other folders)
